[package]
name = "srpk"
version = "0.3.0"
authors = ["Jack Avery <jack.avery.business@gmail.com>"]
edition = "2021"
description = "CLI password manager"
repository = "https://github.com/jack-avery/srpk"
keywords = ["aes", "aes256", "security", "password", "manager"]
readme = "README.md"
license = "MIT"

[dependencies]
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
arboard = "3.3.0"
base64 = "0.21.5"
bcrypt = "0.15.0"
dirs = "5.0.1"
rpassword = "7.3.1"
sha2 = "0.10.8"
sqlite = "0.32.0"
thiserror = "1.0.52"
